# gianduia

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml
assets/shaders/: bloom_downsample.frag  bloom_prefilter.frag  bloom_upsample.frag  gammaCorrect.frag  tonemap.frag
blender_gianduia_exporter/: __init__.py  data_extractors.py  exporter.py
docs/preview/: cbox.xml
include/app/: application.h  debugRenderer.h  glShader.h  glTexture.h  interactiveCamera.h  postProcessor.h
include/gianduia/core/: arena.h  bitmap.h  bvhBuilder.h  bvhTraversal.h  camera.h  denoiser.h  emitter.h  factory.h  fileResolver.h  film.h  filter.h  image2d.h  integrator.h  object.h  parser.h  pcg32.h  primitive.h  propertyList.h  sampler.h  shape.h
include/gianduia/materials/: bsdf.h  bxdf.h  disney.h  fresnel.h  hair.h  material.h  medium.h  reflection.h  transmission.h
include/gianduia/math/: animated.h  bounds.h  color.h  constants.h  distribution.h  frame.h  geometry.h  kdtree.h  microfacet.h  perlin.h  phase.h  photon.h  ray.h  reservoir.h  transform.h  warp.h  worley.h
include/gianduia/scene/: bvh.h  scene.h
include/gianduia/shapes/: curve.h  curveArray.h  mesh.h  primitive.h  shape.h
include/gianduia/textures/: cellular.h  checkerboard.h  constant.h  domainWarp.h  imageTexture.h  marble.h  perlin.h  texture.h  textureCache.h  wood.h
scenes/: cbox.xml  cboxBunny.xml  cboxGlass.xml  cboxMetal.xml  cboxPlastic.xml  csg.xml  meshTest.xml  scene.xml  sponza.xml  sponzaDirect.xml  sponzaMaterial.xml
src/app/: application.cpp  debugRenderer.cpp  main.cpp  postProcessor.cpp
src/cameras/: CMakeLists.txt  perspective.cpp  thinLens.cpp
src/core/: CMakeLists.txt  bitmap.cpp  bvhBuilder.cpp  denoiser.cpp  factory.cpp  fileResolver.cpp  film.cpp  filter.cpp  parser.cpp
src/emitters/: CMakeLists.txt  area.cpp  directional.cpp  environment.cpp  pointlight.cpp  spotlight.cpp
src/integrators/: CMakeLists.txt  ao.cpp  direct.cpp  material.cpp  normals.cpp  path.cpp  photonmapper.cpp  vdbDebug.cpp  volPath.cpp
src/materials/: CMakeLists.txt  bsdf.cpp  conductor.cpp  disney.cpp  glass.cpp  hair.cpp  heterogeneous.cpp  homogeneous.cpp  index.cpp  matte.cpp  plastic.cpp  proceduralMedium.cpp  reflection.cpp  subsurface.cpp  transmission.cpp
src/math/: CMakeLists.txt  animated.cpp  distribution.cpp  microfacet.cpp  photon.cpp  warp.cpp
src/samplers/: CMakeLists.txt  independent.cpp
src/scene/: CMakeLists.txt  bvh.cpp  scene.cpp
src/shapes/: CMakeLists.txt  csg.cpp  cube.cpp  curve.cpp  curveArray.cpp  cylinder.cpp  mesh.cpp  primitive.cpp  sphere.cpp
src/textures/: CMakeLists.txt  cellular.cpp  checkerboard.cpp  constant.cpp  domainWarp.cpp  imageTexture.cpp  marble.cpp  perlin.cpp  wood.cpp
tests/: CMakeLists.txt
tests/cameras/: perspective_test.cpp
tests/emitters/: environment_test.cpp
tests/materials/: fresnel_test.cpp  reflection_test.cpp  transmission_test.cpp
tests/math/: bounds_test.cpp  color_test.cpp  frame_test.cpp  kdtree_test.cpp  microfacet_test.cpp  photon_test.cpp  reservoir_test.cpp  warp_test.cpp
tests/shapes/: cube_test.cpp  curve_test.cpp  cylinder_test.cpp  sphere_test.cpp
tools/gnd2mitsuba/: gnd2mitsuba.py
tools/io_scene_gianduia/: data_extractors.py  exporter.py
